# management

./: .env.example  .gitignore  .mise.toml  .tarpaulin.toml  AGENTS.md  AUTHENTICATION.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.integration  LICENSE.md  Makefile  NOTICE.md  OVERVIEW.md  OpenAPI.yaml  PERFORMANCE.md  README.md  config.integration.yaml  config.production.yaml  config.yaml  docker-compose.yml  openapi.yaml  prometheus.yml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  scorecards.yml  security.yml
crates/infera-management/: Cargo.toml
crates/infera-management-api/: Cargo.toml
crates/infera-management-api/src/: audit.rs  lib.rs  pagination.rs  routes.rs
crates/infera-management-api/src/handlers/: audit_logs.rs  auth.rs  cli_auth.rs  clients.rs  emails.rs  health.rs  jwks.rs  metrics.rs  mod.rs  organizations.rs  sessions.rs  teams.rs  tokens.rs  users.rs  vaults.rs
crates/infera-management-api/src/middleware/: dual_auth.rs  logging.rs  mod.rs  organization.rs  permission.rs  ratelimit.rs  server_auth.rs  session.rs  vault.rs
crates/infera-management-api/tests/: audit_log_tests.rs  client_tests.rs  edge_case_tests.rs  jwks_verify_test.rs  organization_invitation_tests.rs  organization_member_tests.rs  organization_tests.rs  security_authorization_tests.rs  security_input_validation_tests.rs  security_isolation_tests.rs  team_tests.rs  token_tests.rs  vault_tests.rs
crates/infera-management-core/: Cargo.toml
crates/infera-management-core/src/: clock.rs  config.rs  config_refresh.rs  crypto.rs  error.rs  id.rs  jobs.rs  jwt.rs  leader.rs  lib.rs  logging.rs  metrics.rs  ratelimit.rs  repository_context.rs  webhook_client.rs
crates/infera-management-core/src/auth/: mod.rs  password.rs
crates/infera-management-core/src/email/: mod.rs  service.rs  templates.rs
crates/infera-management-core/src/entities/: mod.rs  organization_invitation.rs  passkey_credential.rs  user.rs  user_email.rs  vault_refresh_token.rs
crates/infera-management-core/src/repository/: audit_log.rs  authorization_code.rs  client.rs  client_certificate.rs  jti_replay_protection.rs  mod.rs  organization.rs  organization_invitation.rs  passkey_credential.rs  team.rs  user.rs  user_email.rs  user_email_verification_token.rs  user_password_reset_token.rs  user_session.rs  vault.rs  vault_refresh_token.rs
crates/infera-management-grpc/: Cargo.toml
crates/infera-management-grpc/src/: client.rs  lib.rs
crates/infera-management-storage/: Cargo.toml
crates/infera-management-storage/src/: backend.rs  coordination.rs  factory.rs  fdb.rs  lib.rs  memory.rs  metrics.rs  optimization.rs
crates/infera-management-storage/tests/: fdb_integration_tests.rs
crates/infera-management-test-fixtures/: Cargo.toml
crates/infera-management-test-fixtures/src/: fixtures.rs  lib.rs
crates/infera-management-types/: Cargo.toml
crates/infera-management-types/src/: id.rs  identity.rs  lib.rs
crates/infera-management-types/src/dto/: audit_logs.rs  auth.rs  cli_auth.rs  clients.rs  emails.rs  mod.rs  organizations.rs  sessions.rs  teams.rs  tokens.rs  users.rs  vaults.rs
crates/infera-management-types/src/entities/: audit_log.rs  authorization_code.rs  client.rs  mod.rs  organization.rs  organization_invitation.rs  passkey_credential.rs  team.rs  user.rs  user_email.rs  user_email_verification_token.rs  user_password_reset_token.rs  user_session.rs  vault.rs  vault_refresh_token.rs
crates/infera-management/src/: main.rs
crates/inferadb-control/: Cargo.toml
crates/inferadb-control-api/src/: lib.rs  routes.rs
crates/inferadb-control-api/tests/: jwks_verify_test.rs  organization_member_tests.rs  security_authorization_tests.rs  (+1 more)
crates/inferadb-control-config/: Cargo.toml
crates/inferadb-control-config/src/: lib.rs
crates/inferadb-control-core/: Cargo.toml
crates/inferadb-control-core/src/: config.rs  config_refresh.rs  fdb_invalidation.rs  fdb_jwks.rs  jwt.rs  lib.rs  metrics.rs  webhook_client.rs
crates/inferadb-control-core/src/email/: mod.rs  service.rs
crates/inferadb-control-core/src/repository/: client.rs  team.rs  vault.rs
crates/inferadb-control-discovery/: Cargo.toml
crates/inferadb-control-discovery/src/: config.rs  endpoint.rs  error.rs  kubernetes.rs  lb_client.rs  lib.rs  metrics.rs  refresh.rs  static_discovery.rs  tailscale.rs
crates/inferadb-control-engine-client/: Cargo.toml
crates/inferadb-control-engine-client/src/: client.rs  discovery.rs  lib.rs  refresh.rs
crates/inferadb-control-fdb-shared/: Cargo.toml
crates/inferadb-control-fdb-shared/src/: lib.rs
crates/inferadb-control-types/: Cargo.toml
crates/inferadb-control/src/: main.rs
crates/inferadb-management/: Cargo.toml
crates/inferadb-management-api/: Cargo.toml
crates/inferadb-management-api/src/: lib.rs  routes.rs
crates/inferadb-management-api/src/handlers/: auth.rs  health.rs  mod.rs  tokens.rs
crates/inferadb-management-api/src/middleware/: server_auth.rs
crates/inferadb-management-api/tests/: vault_tests.rs
crates/inferadb-management-server-client/: Cargo.toml
crates/inferadb-management-server-client/src/: client.rs  discovery.rs  lib.rs  refresh.rs
crates/inferadb-management-types/: Cargo.toml
crates/inferadb-management-types/src/: identity.rs
crates/inferadb-management/src/: main.rs
docker/fdb-integration-tests/: Dockerfile  Dockerfile.fdb  README.md  docker-compose.yml  fdb-entrypoint.sh  run-tests.sh  test.sh
docs/: AUTHENTICATION.md  Architecture.md  Authentication.md  Examples.md  Flows.md  GettingStarted.md  OVERVIEW.md  Overview.md  README.md  architecture.md  audit-logs.md  authentication.md  deployment.md  examples.md  flows.md  getting-started.md  overview.md  pagination.md  performance.md  troubleshooting.md
docs/guides/: configuration.md
k8s/: rbac.yaml  tailscale-sidecar.yaml
loadtests/: README.md  auth.js  organizations.js  spike.js  vaults.js
scripts/: coverage.sh  test-nextest.sh
(+35 files in other folders)
