[workspace]
members = [
  "crates/inferadb-control",
  "crates/inferadb-control-api",
  "crates/inferadb-control-config",
  "crates/inferadb-control-const",
  "crates/inferadb-control-core",
  "crates/inferadb-control-discovery",
  "crates/inferadb-control-engine-client",
  "crates/inferadb-control-storage",
  "crates/inferadb-control-test-fixtures",
  "crates/inferadb-control-types",
]
resolver = "2"

[workspace.package]
authors = ["InferaDB Project"]
edition = "2021"
homepage = "https://inferadb.com"
license = "BSL-1.1"
publish = false
repository = "https://github.com/inferadb/inferadb"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
# Core async runtime
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.41", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# System
num_cpus = "1.16"

# Serialization
bytes = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Tracing and observability
metrics = "0.24"
metrics-exporter-prometheus = "0.18.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Web frameworks
axum = { version = "0.8.6", features = ["macros", "tokio"] }
axum-extra = { version = "0.12.2", features = ["cookie", "cookie-private"] }
tonic = "0.14.2"
tonic-build = "0.14.2"
tower = "0.5"
tower-http = { version = "0.6", features = [
  "compression-full",
  "cors",
  "trace",
] }

# Storage
foundationdb = { version = "0.10", features = ["fdb-7_3"] }

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.15.18"

# Testing
criterion = { version = "0.7.0", features = ["async_tokio"] }
proptest = "1.6"

# Random number generation
rand = "0.9.2"

# Authentication & Cryptography
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
hex = "0.4"
jsonwebtoken = { version = "10.1", default-features = false, features = [
  "aws_lc_rs",
  "ed25519-dalek",
  "use_pem",
] }
pem = "3.0"
secrecy = "0.10"
sha2 = "0.10"
uuid = { version = "1.0", features = ["serde", "v4"] }
zeroize = "1.8"

# WebAuthn/Passkey support
webauthn-rs = { version = "0.5", features = [
  "danger-allow-state-serialisation",
] }

# Snowflake ID generation
idgenerator = "2.0"

# Email
lettre = { version = "0.11", default-features = false, features = [
  "builder",
  "smtp-transport",
  "tokio1-rustls-tls",
] }

# HTTP client for external services
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }

# Cookie handling
cookie = "0.18"
tower-cookies = "0.10"

# Time handling
time = { version = "0.3", features = ["formatting", "macros"] }

# Regular expressions
regex = "1.11"

# URL parsing
url = "2.5"

# Terminal utilities
terminal_size = "0.4"
unicode-width = "0.2"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Kubernetes client
k8s-openapi = { version = "0.26", features = ["v1_31"] }
kube = { version = "2.0", features = ["client"] }

# TLS (for crypto provider initialization)
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true

[profile.bench]
inherits = "release"
