[package]
name = "infera-management-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Configuration
config = { workspace = true }

# Cryptography
argon2 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }

# Snowflake IDs
idgenerator = { workspace = true }

# Email
lettre = { workspace = true }

# WebAuthn
webauthn-rs = { workspace = true }

# Validation
regex = { workspace = true }
validator = { workspace = true }

# Storage
infera-management-storage = { path = "../infera-management-storage" }

[dev-dependencies]
