[package]
name = "infera-management-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }

# Snowflake IDs
idgenerator = { workspace = true }

# Email
lettre = { workspace = true }

# WebAuthn
webauthn-rs = { workspace = true }

# Validation
regex = { workspace = true }
validator = { workspace = true }

# HTTP client (for webhook notifications)
reqwest = { workspace = true }
url = { workspace = true }

# Metrics
metrics = { workspace = true }

# Internal dependencies
infera-management-types = { path = "../infera-management-types" }

# Storage
infera-management-storage = { path = "../infera-management-storage" }

# OpenTelemetry (optional, for distributed tracing)
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = []
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

[dev-dependencies]
