[package]
name = "infera-management-test-fixtures"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace crates
infera-management-core = { path = "../infera-management-core" }
infera-management-storage = { path = "../infera-management-storage" }
infera-management-api = { path = "../infera-management-api" }

# External dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
