[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "infera-management-test-fixtures"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace crates
infera-management-api = { path = "../infera-management-api" }
infera-management-core = { path = "../infera-management-core" }
infera-management-storage = { path = "../infera-management-storage" }

# External dependencies
anyhow = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
