[package]
name = "infera-management-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Cryptography (for entity types that use crypto primitives)
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

# WebAuthn (for passkey types)
webauthn-rs = { workspace = true }

# Validation
regex = { workspace = true }
validator = { workspace = true }

# Random (for token generation)
rand = { workspace = true }

# Secure handling
secrecy = { workspace = true }
zeroize = { workspace = true }

# Snowflake ID generation (for entity types)
idgenerator = { workspace = true }
