[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-core"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
terminal_size = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-width = { workspace = true }

# Configuration (now in separate crate)
inferadb-control-config = { path = "../inferadb-control-config" }

# Service discovery
inferadb-control-discovery = { path = "../inferadb-control-discovery" }

# Constants
inferadb-control-const = { path = "../inferadb-control-const" }

# Cryptography
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }

# Snowflake IDs
idgenerator = { workspace = true }

# Email
lettre = { workspace = true }

# WebAuthn
webauthn-rs = { workspace = true }

# Validation
regex = { workspace = true }
validator = { workspace = true }

# HTTP client (for webhook notifications)
reqwest = { workspace = true }
url = { workspace = true }

# Metrics
metrics = { workspace = true }

# Internal dependencies
inferadb-control-types = { path = "../inferadb-control-types" }

# Storage
inferadb-control-storage = { path = "../inferadb-control-storage" }

# Shared FDB types
inferadb-control-fdb-shared = { path = "../inferadb-control-fdb-shared" }

# FoundationDB
foundationdb = { workspace = true }
uuid = { workspace = true }

# OpenTelemetry (optional, for distributed tracing)
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = []
opentelemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  "dep:tracing-opentelemetry",
]

[dev-dependencies]
tempfile = "3.14"
