[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-engine-client"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace crates
inferadb-control-discovery = { path = "../inferadb-control-discovery" }
inferadb-control-types = { path = "../inferadb-control-types" }

# External dependencies
anyhow = { workspace = true }
parking_lot = "0.12"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
