[package]
authors.workspace = true
description = "Shared FDB types for cross-service communication"
edition.workspace = true
license.workspace = true
name = "inferadb-control-fdb-shared"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
