[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "inferadb-control"
path = "src/main.rs"

[dependencies]
# Workspace crates
inferadb-control-api = { path = "../inferadb-control-api" }
inferadb-control-core = { path = "../inferadb-control-core" }
inferadb-control-discovery = { path = "../inferadb-control-discovery" }
inferadb-control-engine-client = { path = "../inferadb-control-engine-client" }
inferadb-control-storage = { path = "../inferadb-control-storage" }

# External dependencies
anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
inferadb-control-test-fixtures = { path = "../inferadb-control-test-fixtures" }
