[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-management-api"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace crates
inferadb-management-core = { path = "../inferadb-management-core" }
inferadb-management-server-client = { path = "../inferadb-management-server-client" }
inferadb-management-storage = { path = "../inferadb-management-storage" }
inferadb-management-types = { path = "../inferadb-management-types" }

# External dependencies
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
once_cell = "1.20"
pem = "3.0"
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
inferadb-management-test-fixtures = { path = "../inferadb-management-test-fixtures" }
