[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-management-server-client"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace crates
inferadb-management-types = { path = "../inferadb-management-types" }

# External dependencies
anyhow = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
parking_lot = "0.12"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
