[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-management-types"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
hostname = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Cryptography (for entity types that use crypto primitives)
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

# WebAuthn (for passkey types)
webauthn-rs = { workspace = true }

# Validation
regex = { workspace = true }
validator = { workspace = true }

# Random (for token generation)
rand = { workspace = true }

# Secure handling
secrecy = { workspace = true }
zeroize = { workspace = true }

# Snowflake ID generation (for entity types)
idgenerator = { workspace = true }

# JWT and PEM encoding (for ManagementIdentity)
jsonwebtoken = { workspace = true }
pem = { workspace = true }
uuid = { workspace = true }
