[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-management"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "inferadb-management"
path = "src/main.rs"

[dependencies]
# Workspace crates
inferadb-management-api = { path = "../inferadb-management-api" }
inferadb-management-core = { path = "../inferadb-management-core" }
inferadb-management-server-client = { path = "../inferadb-management-server-client" }
inferadb-management-storage = { path = "../inferadb-management-storage" }

# External dependencies
anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
inferadb-management-test-fixtures = { path = "../inferadb-management-test-fixtures" }
